[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/selection_utils/selection_utils.gd" type="Script" id=1]

[sub_resource type="Environment" id=1]
background_mode = 1

[sub_resource type="World" id=2]
environment = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type spatial;
render_mode unshaded;

void fragment() {
	ALBEDO = COLOR.rgb;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="Environment" id=5]
background_mode = 1

[sub_resource type="World" id=6]
environment = SubResource( 5 )

[sub_resource type="Shader" id=7]
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D albedo : hint_albedo;

void fragment() {
	// todo: force linear
	ALBEDO = texture(albedo, UV).rgb;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="QuadMesh" id=9]

[sub_resource type="Shader" id=10]
code = "shader_type spatial;
render_mode unshaded, cull_disabled,depth_draw_opaque;

uniform float id;

void vertex() {
	VERTEX.xy = vec2(UV.x, 1.0 - UV.y);
	VERTEX.z = 0.0;
}

void fragment() {
	ALBEDO = abs(COLOR.r - id) < 0.0001 ? vec3(1) : vec3(0);
	ALPHA = abs(COLOR.r - id) < 0.0001 ? 1.0 : 0.0;
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/id = null

[node name="SelectionUtils" type="Node"]
script = ExtResource( 1 )

[node name="SampleViewport" type="Viewport" parent="."]
own_world = true
world = SubResource( 2 )
keep_3d_linear = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 0
gui_disable_input = true

[node name="MeshInstance" type="MeshInstance" parent="SampleViewport"]
material_override = SubResource( 4 )

[node name="Camera" type="Camera" parent="SampleViewport"]
current = true

[node name="IsolateViewport" type="Viewport" parent="."]
own_world = true
world = SubResource( 6 )
keep_3d_linear = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 0
gui_disable_input = true

[node name="BaseTextureMesh" type="MeshInstance" parent="IsolateViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -0.2 )
material_override = SubResource( 8 )
mesh = SubResource( 9 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="IsolateViewport"]
material_override = SubResource( 11 )

[node name="Camera" type="Camera" parent="IsolateViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 2 )
projection = 1
current = true
